# gnarled

./: Cargo.toml  README.md
examples/: Cargo.toml
gnarled/: Cargo.toml
gnarled/src/: attributes.rs  lib.rs  svg.rs
gnarled/src/n2/: bounds.rs  cubic_bezier.rs  hl.rs  lineset.rs  point.rs  polyline.rs  traits.rs
gnarled/src/n3/: mod.rs  shape.rs
gnarled/src/nbase/: bounds.rs  cubic_bezier.rs  line_merger.rs  line_segment.rs  lineset.rs  mod.rs  point.rs  polyline.rs  traits.rs
src/: main.rs  point3d.rs  svg.rs
src/n2/: bounds.rs  cubic_bezier.rs  hl.rs  lineset.rs  mod.rs  point.rs  polyline.rs  tile.rs  traits.rs
src/n3/: mod.rs  shape.rs
src/nbase/: bounds.rs  cubic_bezier.rs  line_merger.rs  lineset.rs  mod.rs  point.rs  polyline.rs
