[package]
name = "gnarled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.30.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
rand = "0.8"

[lib]
name = "gnarled"